--- a/src/app/main-tab/main-tab.component.html
+++ b/src/app/main-tab/main-tab.component.html
@@ -18,5 +18,5 @@
           </tr>
         </tbody>
       </table>
-      
+      <button class="back-button" (click)="backToDash()"><fa-icon [icon]="faCircleArrowLeft"></fa-icon> Back</button>
 </div>
