--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
   <app-nav-and-filter-bar class="nav-bar row"></app-nav-and-filter-bar>
   <div class="row">
     <div class="col-12">
-      <app-main-tab (clickIndex)="selectIndex($event)"  *ngIf="!hideTable" [websites]="websites"></app-main-tab>
-      <app-info  *ngIf="hideTable" [websites]="websites" [selectedIndex]="selectedIndex" (openTab)="openMainTab($event)"></app-info>
+      <app-dashboard *ngIf="layout==='dashbord'" (openTabTipe)="openMainDataTab($event)"></app-dashboard>
+      <app-main-tab (clickIndex)="selectIndex($event)"  *ngIf="layout==='table'" [websites]="websites" (openDashboard)="showDashbord()"></app-main-tab>
+      <app-info  *ngIf="layout==='info'" [websites]="websites" [selectedIndex]="selectedIndex" (openTab)="openMainTab($event)"></app-info>
     </div>
   </div>
 </div>
